--- a/src/app/components/topic-list/topic-list.component.html
+++ b/src/app/components/topic-list/topic-list.component.html
@@ -1,1 +1,18 @@
-<p>topic-list works!</p>
+<h2>Angular Crash Course</h2>
+<div class="main flex">
+    <a routerLink="binding">
+        <button class="btn box-shadow">Binding</button>
+    </a>
+    <a routerLink="directives">
+        <button class="btn box-shadow">Directives</button>
+    </a>
+    <a routerLink="dependency">
+        <button class="btn box-shadow">Dependency</button>
+    </a>
+    <a routerLink="form">
+        <button class="btn box-shadow">Forms</button>
+    </a>
+    <a routerLink="">
+        <button class="btn box-shadow">Routing</button>
+    </a>
+</div>
