--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <div class="container">
-  <h2>Angular Crash Course</h2>
-  <app-topic-list></app-topic-list>
+  <router-outlet></router-outlet>
 </div>
