--- a/src/app/components/directives/directives.component.html
+++ b/src/app/components/directives/directives.component.html
@@ -1,1 +1,22 @@
-<p>directives works!</p>
+<h1>Angular Directives</h1>
+
+<div *ngIf="courses.length > 0; else noCourses" class="margin">
+    List of directives
+</div>
+
+<ng-template #noCourses>
+    No directives yet
+</ng-template>
+
+<ul class="nav nav-pills">
+    <li [class.active]="viewMode == 'map'"><a (click)="viewMode = 'map'">Map View</a></li>
+    <li [class.active]="viewMode == 'list'"><a (click)="viewMode = 'list'">List View</a></li>
+</ul>
+
+<div [ngSwitch]="viewMode">
+    <div *ngSwitchCase="'map'">Map View Content</div>
+    <div *ngSwitchCase="'List'">List view Content</div>
+    <div *ngSwitchDefault>Otherwise</div>
+</div>
+
+<h3 appDirective >Attribute directives</h3>
