--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,1 +1,60 @@
-<p>form works!</p>
+<h1>Reactive Form</h1>
+
+<form class="form" [formGroup]="form" novalidate>
+  <div class="form-group">
+    <label for="">Email</label>
+    <input
+      type="email"
+      class="form-control rounded-0"
+      formControlName="email"
+    />
+    <div
+      *ngIf="
+        form.controls['email'].invalid &&
+        (form.controls['email'].dirty || form.controls['email'].touched)
+      "
+    >
+      <small
+        class="text-danger"
+        *ngIf="form.controls['email'].errors?.['required']"
+      >
+        Email is required.
+      </small>
+      <small
+        class="text-danger"
+        *ngIf="form.controls['email'].errors?.['pattern']"
+      >
+        Email is invalid.
+      </small>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="">Password</label>
+    <input
+      type="password"
+      class="form-control rounded-0"
+      formControlName="password"
+    />
+    <div
+      *ngIf="
+        form.controls['password'].invalid &&
+        (form.controls['password'].dirty || form.controls['password'].touched)
+      "
+    >
+      <small
+        class="text-danger"
+        *ngIf="form.controls['password'].errors?.['required']"
+      >
+        Password is required.
+      </small>
+    </div>
+  </div>
+  <button
+    class="btn btn-primary btn-block"
+    style="margin: 25px 0"
+    [disabled]="form.invalid"
+    (click)="login()"
+  >
+    Login
+  </button>
+</form>
